refactor(api): harden backend threading contracts